--- a/Missions_to_Mars/templates/index.html
+++ b/Missions_to_Mars/templates/index.html
@@ -52,21 +52,21 @@
         <h1>Mars Hemispheres</h1>
         </div>
           <div>
-            <img src="{{mars.mars_hemis[0]['img_url']}}" alt="Mars Hemisphere1" style="width:400px;height:400px;border:0;">
-            <h3>{{mars.hempispher_image[0]['title']}}</h3>
+            <img src="{{mars.hemisphere_image[0]['img_url']}}" style="width:400px;height:400px;border:0;">
+            <h3>{{mars.hemisphere_image[0]['title']}}</h3>
           </div>
           <div>
-            <img src="{{mars.mars_hemis[1]['img_url']}}" alt="Mars Hemisphere2" style="width:400px;height:400px;border:0;">
-            <h3>{{mars.hempispher_image[1]['title']}}</h3>
+            <img src="{{mars.hemisphere_image[1]['img_url']}}" style="width:400px;height:400px;border:0;">
+            <h3>{{mars.hemisphere_image[1]['title']}}</h3>
           </div>
 
           <div>
-            <img src="{{mars.mars_hemis[0]['img_url']}}" alt="Mars Hemisphere1" style="width:400px;height:400px;border:0;">
-            <h3>{{mars.hempispher_image[0]['title']}}</h3>
+            <img src="{{mars.hempispher_image[0]['img_url']}}" style="width:400px;height:400px;border:0;">
+            <h3>{{mars.hemisphere_image[0]['title']}}</h3>
           </div>
           <div>
-            <img src="{{mars.mars_hemis[1]['img_url']}}" alt="Mars Hemisphere2" style="width:400px;height:400px;border:0;">
-            <h3>{{mars.hempispher_image[1]['title']}}</h3>
+            <img src="{{mars.hempispher_image[1]['img_url']}}" style="width:400px;height:400px;border:0;">
+            <h3>{{mars.hemisphere_image[1]['title']}}</h3>
           </div>
 
 </body>
