--- a/Missions_to_Mars/templates/index.html
+++ b/Missions_to_Mars/templates/index.html
@@ -45,9 +45,9 @@
 
           <div>
             <h3>Mars facts</h3>
-            {{mars.tables}}
+            {{mars.mars_facts | safe}}
           </div>
- 
+
         <div>
         <h1>Mars Hemispheres</h1>
         </div>
@@ -61,12 +61,12 @@
           </div>
 
           <div>
-            <img src="{{mars.hempispher_image[0]['img_url']}}" style="width:400px;height:400px;border:0;">
-            <h3>{{mars.hemisphere_image[0]['title']}}</h3>
+            <img src="{{mars.hemisphere_image[2]['img_url']}}" style="width:400px;height:400px;border:0;">
+            <h3>{{mars.hemisphere_image[2]['title']}}</h3>
           </div>
           <div>
-            <img src="{{mars.hempispher_image[1]['img_url']}}" style="width:400px;height:400px;border:0;">
-            <h3>{{mars.hemisphere_image[1]['title']}}</h3>
+            <img src="{{mars.hemisphere_image[3]['img_url']}}" style="width:400px;height:400px;border:0;">
+            <h3>{{mars.hemisphere_image[3]['title']}}</h3>
           </div>
 
 </body>
