--- a/Missions_to_Mars/templates/index.html
+++ b/Missions_to_Mars/templates/index.html
@@ -1,22 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-
-<head>
-  <title>Mission to Mars</title>
-  <meta charset="utf-8">
-
-</head>
-
-
-<!DOCTYPE html>
-<html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <title>Mission to Mars</title>
 
 </head>
@@ -29,45 +20,53 @@
           Mars Web Scraping
         </p>
         <div>
-          <h2>This is the latest Mars news.</h2>
+          <h2>Latest Mars News.</h2>
           <h4> {{ mars.news_titles}}</h4>
           <p> {{mars.summarys}} </p>
         </div>
-        <div>
+        <div class="container-fluid">
+        <div class="row">
+        <div class="col-md-8">
           <h2>This is the featured image from JPL.</h2>
           <img src="{{mars.featured_img}}" alt="Mars featured image" />
-
+        </div>
+        <div class="col-md-4">
               <h3>The current weather on Mars</h3>
               <p>
                 {{mars.Weather}}
               </p>
           </div>
 
-          <div>
+          <div class="col-md-12">
             <h3>Mars facts</h3>
             {{mars.mars_facts | safe}}
           </div>
+        </div>
+      </div>
 
         <div>
         <h1>Mars Hemispheres</h1>
         </div>
-          <div>
+        <div class="row">
+          <div class="col-md-6">
             <img src="{{mars.hemisphere_image[0]['img_url']}}" style="width:400px;height:400px;border:0;">
             <h3>{{mars.hemisphere_image[0]['title']}}</h3>
           </div>
-          <div>
+          <div class="col-md-6">
             <img src="{{mars.hemisphere_image[1]['img_url']}}" style="width:400px;height:400px;border:0;">
             <h3>{{mars.hemisphere_image[1]['title']}}</h3>
           </div>
-
-          <div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
             <img src="{{mars.hemisphere_image[2]['img_url']}}" style="width:400px;height:400px;border:0;">
             <h3>{{mars.hemisphere_image[2]['title']}}</h3>
           </div>
-          <div>
+          <div class="col-md-6">
             <img src="{{mars.hemisphere_image[3]['img_url']}}" style="width:400px;height:400px;border:0;">
             <h3>{{mars.hemisphere_image[3]['title']}}</h3>
           </div>
+        </div>
 
 </body>
 
